fix:cancel-old rendezVous logique